--- a/README
+++ b/README
@@ -53,3 +53,33 @@ Run one of `use-daemontools`, `use-runit`, or `use-s6` to switch support between
 Because logging is framework and system dependent, it is disabled by default, with the default logging script pointing to `/bin/true`.  You will need to go into the `/etc/sv/.log` directory and remove the symlink named `run`, and then redefine it to point to one of the logging scripts in that directory.  *This will become the default logging service system-wide, and requires that you have the appropriate logging service already installed.* 
 
 That's it!  The definitions are ready to use.
+
+# Common Issues
+
+## Definitions fail to start
+* Is there an `untested` file present in the definition directory?  If so, the service you are attempting to start may not be fully tested.  If you see this, please send me details about your configuration and what you are attempting to start.
+* Make sure you copied the four hidden directories to the service definition directory.
+
+## Definitions loop over and over
+Check to make sure your service is installed correctly, and that any configuration files have the correct settings.
+
+## My simple service won't start
+The requirements for run-simple are as follows:
+
+1. The definition directory name must *exactly* match the program name
+1. The program does not require the creation of lock files, pid directories, or run directories.
+1. You have set all of the needed command line options in the ./options file.
+1. The ./options file is executable, i.e. 700 or 750 or 755.
+
+## My getty won't start
+The requirements for run-getty are as follows:
+
+1. The appropriate getty is installed and in the `$PATH`
+1. The definition directory name must be the getty program, a hyphen, and the tty to be controlled.  Example: mingetty-tty2 will start as `mingetty tty2`
+
+## My user-controlled svscan/runsvdir/s6-svscan won't start
+The requirements for run-user-service are as follows:
+
+1. The appropriate svscan is installed and in the `$PATH`.  *This requirement may go away in a future version.*
+1. The definition directory name must be the framework-specific svscan program, a hyphen, and the user name.  Example: s6-svscan-juser will start `sv6-svscan /home/juser/service`.  Example 2: runsvdir-juser will start `runsvdir -P /home/juser/service`.
+1. Do not attempt to inject the command options for the service, they will be automatically included.
