--- a/README
+++ b/README
@@ -80,6 +80,6 @@ The requirements for run-getty are as follows:
 ## My user-controlled svscan/runsvdir/s6-svscan won't start
 The requirements for run-user-service are as follows:
 
-1. The appropriate svscan is installed and in the `$PATH`.  *This requirement may go away in a future version.*
-1. The definition directory name must be the framework-specific svscan program, a hyphen, and the user name.  Example: s6-svscan-juser will start `sv6-svscan /home/juser/service`.  Example 2: runsvdir-juser will start `runsvdir -P /home/juser/service`.
 1. Do not attempt to inject the command options for the service, they will be automatically included.
+1. The appropriate svscan is installed and in the `$PATH`.  *This requirement may go away in a future version.*
+1. The definition directory name must be the framework-specific svscan program, a hyphen, and the user name.  Example: s6-svscan-juser will start `sv6-svscan -c1000 /home/juser/service`.  Example 2: runsvdir-juser will start `runsvdir -P /home/juser/service`.
